--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
+    "tiktok:import-categories": "ts-node scripts/import-tiktok-categories.ts",
     "ok": "pm2 delete 0 && nest build && pm2 start dist/main.js"
   },
   "dependencies": {
